Revise and cleanup config files.
git-svn-id: https://dsl-external.bbn.com/svn/immortals/trunk/dsl/resource-dsl@203 e2ae056a-197f-4f36-953d-074c54ff641a

--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -1,41 +1,49 @@
-name:                Resource-DSL
-version:             0.0.0
-synopsis:            Initial project template from stack.
-description:         Please see README.md
-homepage:            http://github.com/lambda-land/Resource-DSL/resource-dsl
-license:             BSD3
-license-file:        LICENSE
-author:              Eric Walkingshaw
-maintainer:          walkiner@oregonstate.edu
-copyright:           2016 Eric Walkingshaw
-category:            Language
-build-type:          Simple
--- extra-source-files:
-cabal-version:       >=1.10
-
-library
-  hs-source-dirs:      src
-  exposed-modules:     Lib
-  build-depends:       base >= 4.7 && < 5
-  default-language:    Haskell2010
-
-executable resource-dsl-exe
-  hs-source-dirs:      app
-  main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  build-depends:       base
-                     , Resource-DSL
-  default-language:    Haskell2010
-
-test-suite resource-dsl-test
-  type:                exitcode-stdio-1.0
-  hs-source-dirs:      test
-  main-is:             Spec.hs
-  build-depends:       base
-                     , Resource-DSL
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  default-language:    Haskell2010
+name:          Resource-DSL
+version:       0.0.0
+homepage:      http://github.com/lambda-land/Resource-DSL/resource-dsl
+license:       BSD3
+license-file:  LICENSE
+author:        Eric Walkingshaw
+maintainer:    walkiner@oregonstate.edu
+category:      Language
+build-type:    Simple
+cabal-version: >= 1.22
 
 source-repository head
   type:     git
   location: https://github.com/lambda-land/Resource-DSL/resource-dsl
+  branch:   master
+
+-- NOTE: sbv also requires z3 executable on PATH!
+library
+  hs-source-dirs:   src
+  default-language: Haskell2010
+  build-depends:
+    base,
+    containers,
+    aeson,
+    mtl,
+    sbv
+  exposed-modules:
+    Lib
+
+executable resource-dsl
+  hs-source-dirs:   app
+  default-language: Haskell2010
+  main-is:          Main.hs
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+    Resource-DSL,
+    base
+
+test-suite resource-dsl-test
+  hs-source-dirs:   test
+  default-language: Haskell2010
+  type:             exitcode-stdio-1.0
+  main-is:          Spec.hs
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+    Resource-DSL,
+    base,
+    tasty,
+    tasty-hunit
