--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -20,12 +20,16 @@ library
   default-language: Haskell2010
   build-depends:
     base,
-    containers,
     aeson,
+    bytestring,
+    containers,
     mtl,
     sbv
   exposed-modules:
-    Lib
+    Driver,
+    DSL.Type,
+    DSL.Serialize,
+    Example.Stub
 
 executable resource-dsl
   hs-source-dirs:   app
