Write and read example inputs.
git-svn-id: https://dsl-external.bbn.com/svn/immortals/trunk/dsl/resource-dsl@210 e2ae056a-197f-4f36-953d-074c54ff641a

--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -21,8 +21,10 @@ library
   build-depends:
     base,
     aeson,
+    aeson-pretty,
     bytestring,
     containers,
+    directory,
     mtl,
     sbv
   exposed-modules:
