Proper implementation of predicates.
git-svn-id: https://dsl-external.bbn.com/svn/immortals/trunk/dsl/resource-dsl@229 e2ae056a-197f-4f36-953d-074c54ff641a

--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -28,9 +28,11 @@ library
     sbv
   exposed-modules:
     Driver,
+    DSL.Env,
     DSL.Expr,
-    DSL.Check,
     DSL.Type,
+    DSL.Predicate,
+    DSL.SAT,
     DSL.Serialize,
     Example.Stub
 
