Infrastructure for type checking.
git-svn-id: https://dsl-external.bbn.com/svn/immortals/trunk/dsl/resource-dsl@240 e2ae056a-197f-4f36-953d-074c54ff641a

--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -28,12 +28,13 @@ library
     sbv
   exposed-modules:
     Driver,
+    DSL.Check,
     DSL.Env,
     DSL.Expr,
-    DSL.Type,
     DSL.Predicate,
     DSL.SAT,
     DSL.Serialize,
+    DSL.Type,
     Example.Stub
 
 executable resource-dsl
