Rename example, move demo driver into examples.
git-svn-id: https://dsl-external.bbn.com/svn/immortals/trunk/dsl/resource-dsl@284 e2ae056a-197f-4f36-953d-074c54ff641a

--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -38,7 +38,9 @@ library
     DSL.Semantics,
     DSL.Serialize,
     DSL.Type,
-    Example.Stub
+    Example.Demo,
+    Example.DemoDriver,
+    Example.Location
 
 executable resource-dsl
   hs-source-dirs:   app
