Finish location driver.
git-svn-id: https://dsl-external.bbn.com/svn/immortals/trunk/dsl/resource-dsl@292 e2ae056a-197f-4f36-953d-074c54ff641a

--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -40,7 +40,8 @@ library
     DSL.Type,
     Example.Demo,
     Example.DemoDriver,
-    Example.Location
+    Example.Location,
+    Example.LocationDriver
 
 executable resource-dsl
   hs-source-dirs:   app
