--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -52,11 +52,11 @@ executable resource-dsl
     Resource-DSL,
     base
 
-test-suite resource-dsl-test
+test-suite test
   hs-source-dirs:   test
   default-language: Haskell2010
   type:             exitcode-stdio-1.0
-  main-is:          Spec.hs
+  main-is:          Tests.hs
   ghc-options:      -threaded -rtsopts -with-rtsopts=-N
   build-depends:
     Resource-DSL,
