Add new abstract syntax definition.
git-svn-id: https://dsl-external.bbn.com/svn/immortals/trunk/dsl/resource-dsl@496 e2ae056a-197f-4f36-953d-074c54ff641a

--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -33,7 +33,8 @@ library
     DSL.Predicate,
     DSL.Primitive,
     DSL.SAT,
-    DSL.Serialize
+    DSL.Serialize,
+    DSL.Syntax
 
 executable resource-dsl
   hs-source-dirs:   app
