Reorganize/refactor resource effects.

--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -33,9 +33,11 @@ library
     DSL.Environment,
     DSL.Predicate,
     DSL.Primitive,
+    DSL.Resource,
     DSL.SAT,
     DSL.Serialize,
-    DSL.Syntax
+    DSL.Syntax,
+    DSL.Type
 
 executable resource-dsl
   hs-source-dirs:   app
