--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -17,6 +17,12 @@ source-repository head
 library
   hs-source-dirs:   src
   default-language: Haskell2010
+  extensions:
+    DeriveDataTypeable,
+    DeriveGeneric,
+    FlexibleContexts,
+    GeneralizedNewtypeDeriving,
+    MultiParamTypeClasses
   build-depends:
     base,
     aeson,
