--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -17,12 +17,15 @@ source-repository head
 library
   hs-source-dirs:   src
   default-language: Haskell2010
-  extensions:
+  default-extensions:
     DeriveDataTypeable,
     DeriveGeneric,
     FlexibleContexts,
+    FlexibleInstances,
     GeneralizedNewtypeDeriving,
     MultiParamTypeClasses
+  other-extensions:
+    UndecidableInstances
   build-depends:
     base,
     aeson,
