Initial sketch of driver.

--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -42,7 +42,7 @@ library
     text,
     vector
   exposed-modules:
-    Driver,
+    DSL.Driver,
     DSL.Effect,
     DSL.Environment,
     DSL.Expression,
