--- a/stack.yaml
+++ b/stack.yaml
@@ -3,5 +3,5 @@
 
 # The resolver determines which packages are used to resolve the dependencies
 # in the Cabal build file.
-# https://www.stackage.org/lts-6.14
-resolver: lts-6.14
+# https://www.stackage.org/nightly-2016-09-04
+resolver: nightly-2016-09-04
