--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -33,8 +33,9 @@ library
     bytestring,
     composition,
     containers,
-    exceptions,
     directory,
+    exceptions,
+    filepath,
     megaparsec,
     mtl,
     optparse-applicative,
