--- a/stack.yaml
+++ b/stack.yaml
@@ -3,5 +3,5 @@
 
 # The resolver determines which packages are used to resolve the dependencies
 # in the Cabal build file.
-# https://www.stackage.org/nightly-2016-09-04
-resolver: nightly-2016-09-04
+# https://www.stackage.org/lts-7.0
+resolver: lts-7.0
