--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -23,7 +23,8 @@ library
     FlexibleContexts,
     FlexibleInstances,
     GeneralizedNewtypeDeriving,
-    MultiParamTypeClasses
+    MultiParamTypeClasses,
+    OverloadedStrings
   other-extensions:
     UndecidableInstances
   build-depends:
@@ -41,6 +42,7 @@ library
     mtl,
     optparse-applicative,
     sbv,
+    split,
     text,
     vector
   exposed-modules:
@@ -49,6 +51,7 @@ library
     DSL.Environment,
     DSL.Expression,
     DSL.Model,
+    DSL.Name,
     DSL.Parser,
     DSL.Predicate,
     DSL.Pretty,
@@ -72,6 +75,8 @@ executable resource-dsl
 test-suite test
   hs-source-dirs:   test
   default-language: Haskell2010
+  default-extensions:
+    OverloadedStrings
   type:             exitcode-stdio-1.0
   main-is:          Tests.hs
   ghc-options:      -threaded -rtsopts -with-rtsopts=-N
