--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -27,22 +27,24 @@ library
   other-extensions:
     UndecidableInstances
   build-depends:
-    base,
-    aeson,
-    aeson-better-errors,
-    aeson-pretty,
-    bytestring,
-    composition,
-    containers,
-    directory,
-    exceptions,
-    filepath,
-    megaparsec,
-    mtl,
-    optparse-applicative,
-    sbv,
-    text,
-    vector
+                  aeson
+                , aeson-better-errors
+                , aeson-pretty
+                , base
+                , bytestring
+                , composition
+                , containers
+                , directory
+                , exceptions
+                , filepath
+                , megaparsec
+                , mtl
+                , optparse-applicative
+                , sbv
+                , tasty >= 0.11.0.4
+                , tasty-hunit >= 0.9.2
+                , text
+                , vector
   exposed-modules:
     DSL.Driver,
     DSL.Effect,
