--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -27,22 +27,26 @@ library
   other-extensions:
     UndecidableInstances
   build-depends:
-    base,
-    aeson,
-    aeson-better-errors,
-    aeson-pretty,
-    bytestring,
-    composition,
-    containers,
-    directory,
-    exceptions,
-    filepath,
-    megaparsec,
-    mtl,
-    optparse-applicative,
-    sbv,
-    text,
-    vector
+                  aeson
+                , aeson-better-errors
+                , aeson-pretty
+                , base
+                , bytestring
+                , composition
+                , containers
+                , directory
+                , exceptions
+                , filepath
+                , megaparsec
+                , mtl
+                , optparse-applicative
+                , sbv
+                -- remove for actual builds! Jeff to configure spacemacs better
+                , tasty >= 0.11.0.4
+                , tasty-hunit >= 0.9.2
+                -- remove above for actual builds
+                , text
+                , vector
   exposed-modules:
     DSL.Driver,
     DSL.Effect,
@@ -76,14 +80,14 @@ test-suite test
   main-is:          Tests.hs
   ghc-options:      -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-    Resource-DSL,
-    base,
-    aeson,
-    aeson-better-errors,
-    aeson-pretty,
-    tasty,
-    tasty-hunit,
-    tasty-th
+                  Resource-DSL
+                , aeson
+                , aeson-better-errors
+                , aeson-pretty
+                , base
+                , tasty
+                , tasty-hunit
+                , tasty-th
   other-modules:
     DSL.Test.Effect,
     DSL.Test.Serialize
