--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -17,6 +17,7 @@ source-repository head
 library
   hs-source-dirs:   src
   default-language: Haskell2010
+  ghc-options:      -W -Wredundant-constraints
   default-extensions:
     DeriveDataTypeable,
     DeriveGeneric,
@@ -77,11 +78,11 @@ executable resource-dsl
 test-suite test
   hs-source-dirs:   test
   default-language: Haskell2010
-  default-extensions:
-    OverloadedStrings
   type:             exitcode-stdio-1.0
   main-is:          Tests.hs
   ghc-options:      -threaded -rtsopts -with-rtsopts=-N
+  default-extensions:
+    OverloadedStrings
   build-depends:
     Resource-DSL,
     base,
