--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -75,6 +75,8 @@ executable resource-dsl
 
 test-suite test
   hs-source-dirs:   test
+                  , test/DSL/Effect
+                  , test/DSL/Serialize
   default-language: Haskell2010
   type:             exitcode-stdio-1.0
   main-is:          Tests.hs
@@ -89,5 +91,5 @@ test-suite test
                 , tasty-hunit
                 , tasty-th
   other-modules:
-    DSL.Test.Effect,
-    DSL.Test.Serialize
+    DSL.Effect.Test,
+    DSL.Serialize.Test
