--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -68,7 +68,7 @@ executable resource-dsl
   hs-source-dirs:   app
   default-language: Haskell2010
   main-is:          Main.hs
-  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fhpc
   build-depends:
     Resource-DSL,
     base
@@ -80,7 +80,7 @@ test-suite test
   default-language: Haskell2010
   type:             exitcode-stdio-1.0
   main-is:          Tests.hs
-  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fhpc
   build-depends:
                   Resource-DSL
                 , aeson
