--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -77,6 +77,7 @@ test-suite test
   hs-source-dirs:   test
                   , test/DSL/Effect
                   , test/DSL/Serialize
+                  , test/DSL/Model
   default-language: Haskell2010
   type:             exitcode-stdio-1.0
   main-is:          Tests.hs
