--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -78,6 +78,7 @@ test-suite test
                   , test/DSL/Effect
                   , test/DSL/Serialize
                   , test/DSL/Model
+                  , test/DSL/Profile
   default-language: Haskell2010
   type:             exitcode-stdio-1.0
   main-is:          Tests.hs
