--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -44,6 +44,7 @@ library
                 -- remove for actual builds! Jeff to configure spacemacs better
                 , tasty >= 0.11.0.4
                 , tasty-hunit >= 0.9.2
+                , json-schema >= 0.7
                 -- remove above for actual builds
                 , text
                 , vector
