--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -45,6 +45,7 @@ library
                 , tasty >= 0.11.0.4
                 , tasty-hunit >= 0.9.2
                 , hjsonschema
+                , json-schema
                 -- remove above for actual builds
                 , text
                 , vector
