--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -81,14 +81,10 @@ executable resource-dsl
 
 test-suite test
   hs-source-dirs:   test
-                  , test/DSL/Effect
-                  , test/DSL/Serialize
-                  , test/DSL/Model
-                  , test/DSL/Profile
   default-language: Haskell2010
   type:             exitcode-stdio-1.0
   main-is:          Tests.hs
-  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fhpc
   default-extensions:
     OverloadedStrings
   build-depends:
@@ -101,8 +97,3 @@ test-suite test
                 , tasty-hunit
                 , tasty-th
   other-modules:
-    DSL.Effect.Test,
-    DSL.Serialize.Test
-    DSL.Expression.Test
-    DSL.Model.Test
-    DSL.Profile.Test
