--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -19,65 +19,66 @@ library
   default-language: Haskell2010
   ghc-options:      -W -Wredundant-constraints
   default-extensions:
-    DeriveDataTypeable,
-    DeriveGeneric,
-    FlexibleContexts,
-    FlexibleInstances,
-    GeneralizedNewtypeDeriving,
-    MultiParamTypeClasses,
-    OverloadedStrings
+      DeriveDataTypeable
+    , DeriveGeneric
+    , FlexibleContexts
+    , FlexibleInstances
+    , GeneralizedNewtypeDeriving
+    , MultiParamTypeClasses
+    , OverloadedStrings
   other-extensions:
-    UndecidableInstances
-  build-depends: aeson
-                , aeson-better-errors
-                , aeson-pretty
-                , base
-                , bytestring
-                , composition
-                , containers
-                , directory
-                , exceptions
-                , filepath
-                , megaparsec
-                , mtl
-                , optparse-applicative
-                , sbv
-                , split
-                , tasty >= 0.11.0.4
-                , tasty-hunit >= 0.9.2
-                , text
-                , vector
-                , json-schema
+      UndecidableInstances
+  build-depends:
+      base
+    , aeson
+    , aeson-better-errors
+    , aeson-pretty
+    , bytestring
+    , composition
+    , containers
+    , directory
+    , exceptions
+    , filepath
+    , json-schema
+    , megaparsec
+    , mtl
+    , optparse-applicative
+    , sbv
+    , split
+    , text
+    , vector
 
   exposed-modules:
-    DSL.Driver,
-    DSL.Effect,
-    DSL.Environment,
-    DSL.Expression,
-    DSL.Model,
-    DSL.Name,
-    DSL.Parser,
-    DSL.Path,
-    DSL.Predicate,
-    DSL.Pretty,
-    DSL.Primitive,
-    DSL.Profile,
-    DSL.Resource,
-    DSL.SAT,
-    DSL.Serialize,
-    DSL.Sugar,
-    DSL.Value,
-    DSL.Example.Location,
-    DSL.Example.Network
+      DSL.Driver
+    , DSL.Effect
+    , DSL.Environment
+    , DSL.Expression
+    , DSL.Model
+    , DSL.Name
+    , DSL.Parser
+    , DSL.Path
+    , DSL.Predicate
+    , DSL.Pretty
+    , DSL.Primitive
+    , DSL.Profile
+    , DSL.Resource
+    , DSL.SAT
+    , DSL.Serialize
+    , DSL.Sugar
+    , DSL.Value
+    , DSL.Example.Location
+    , DSL.Example.Network
 
 executable resource-dsl
   hs-source-dirs:   app
   default-language: Haskell2010
   main-is:          Main.hs
   ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fhpc
+  default-extensions:
+      OverloadedStrings
   build-depends:
-    Resource-DSL,
-    base
+      Resource-DSL
+    , base
 
 test-suite test
   hs-source-dirs:   test
@@ -86,14 +87,14 @@ test-suite test
   main-is:          Tests.hs
   ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fhpc
   default-extensions:
-    OverloadedStrings
+      OverloadedStrings
   build-depends:
-                  Resource-DSL
-                , aeson
-                , aeson-better-errors
-                , aeson-pretty
-                , base
-                , tasty
-                , tasty-hunit
-                , tasty-th
+      Resource-DSL
+    , base
+    , aeson
+    , aeson-better-errors
+    , aeson-pretty
+    , tasty
+    , tasty-hunit
+    , tasty-th
   other-modules:
