WIP on example with new DFU names

--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -69,6 +69,7 @@ library
     , DSL.Value
     , DSL.Example.Location
     , DSL.Example.Network
+    , DSL.Example.NewVerbsSaasm
 
 executable resource-dsl
   hs-source-dirs:   app
