--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -19,7 +19,8 @@ library
   default-language: Haskell2010
   ghc-options:      -W -Wredundant-constraints
   default-extensions:
-      DeriveDataTypeable
+      ConstraintKinds
+    , DeriveDataTypeable
     , DeriveGeneric
     , FlexibleContexts
     , FlexibleInstances
@@ -50,13 +51,13 @@ library
     , vector
 
   exposed-modules:
---    DSL.Driver
-    DSL.Effect
+    DSL.Driver
+    , DSL.Effect
     , DSL.Environment
     , DSL.Expression
     , DSL.Model
     , DSL.Name
---    , DSL.Parser
+    , DSL.Parser
     , DSL.Path
     , DSL.Predicate
     , DSL.Pretty
@@ -65,7 +66,7 @@ library
     , DSL.Resource
     , DSL.SAT
     , DSL.SegList
---    , DSL.Serialize
+    , DSL.Serialize
     , DSL.Sugar
     , DSL.Types
     , DSL.V
