--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -75,16 +75,16 @@ library
 --    , DSL.Example.Location
 --    , DSL.Example.Network
 
---executable resource-dsl
---  hs-source-dirs:   app
---  default-language: Haskell2010
---  main-is:          Main.hs
---  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fhpc
---  default-extensions:
---      OverloadedStrings
---  build-depends:
---      Resource-DSL
---    , base
+executable resource-dsl
+  hs-source-dirs:   app
+  default-language: Haskell2010
+  main-is:          Main.hs
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fhpc
+  default-extensions:
+      OverloadedStrings
+  build-depends:
+      Resource-DSL
+    , base
 
 test-suite test
   hs-source-dirs:   test
