almost there for CP 3

--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -74,6 +74,7 @@ library
     , DSL.Value
     , DSL.Example.Location
     , DSL.Example.Network
+    , DSL.Example.CrossApp
 
 executable resource-dsl
   hs-source-dirs:   app
