--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -108,3 +108,8 @@ test-suite test
     , tasty-hunit
     , tasty-th
   other-modules:
+      DSL.Parser.Test
+    , DSL.Primitive.Test
+    , DSL.SAT.Test
+    , DSL.V.Test
+    , DSL.Value.Test
