add keyword arguments and update README

--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -57,6 +57,7 @@ library
     , DSL.Expression
     , DSL.Model
     , DSL.Name
+    , DSL.Options
     , DSL.Parser
     , DSL.Path
     , DSL.Predicate
