--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -84,7 +84,7 @@ library
     , DSL.Example.CrossApp
     , DSL.Example.Location
     , DSL.Example.Network
-    , DSL.Example.SwRI
+    , DSL.Example.SwapDau
 
 executable resource-dsl
   hs-source-dirs:   app
