--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -19,6 +19,7 @@ library
   hs-source-dirs:   src
   default-language: Haskell2010
   ghc-options:
+    -- -fprof-auto
     -Wall
     -Wredundant-constraints
     -Wno-missing-signatures
