--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -60,7 +60,8 @@ library
     , vector
 
   exposed-modules:
-      DSL.Driver
+      DSL.Boolean
+    , DSL.Driver
     , DSL.Effect
     , DSL.Environment
     , DSL.Expression
@@ -113,7 +114,6 @@ test-suite test
     , aeson-better-errors
     , aeson-pretty
     , megaparsec
-    , sbv
     , text
     , tasty
     , tasty-hunit
