--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -110,9 +110,9 @@ test-suite test
     , tasty-hunit
     , tasty-th
   other-modules:
-      DSL.Example.SwapDau.Test
+      DSL.Evaluation.Test
+    , DSL.Example.SwapDau.Test
     , DSL.Parser.Test
     , DSL.Primitive.Test
     , DSL.SAT.Test
-    , DSL.V.Test
-    , DSL.Value.Test
+    , DSL.Variational.Test
