--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -34,6 +34,7 @@ library
     , FlexibleContexts
     , FlexibleInstances
     , GeneralizedNewtypeDeriving
+    , LambdaCase
     , MultiParamTypeClasses
     , OverloadedStrings
   other-extensions:
@@ -104,6 +105,7 @@ test-suite test
     , aeson
     , aeson-better-errors
     , aeson-pretty
+    , containers
     , megaparsec
     , text
     , tasty
