Add symbol environments and reading values from SAT models.

--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -37,6 +37,7 @@ library
     , LambdaCase
     , MultiParamTypeClasses
     , OverloadedStrings
+    , TupleSections
   other-extensions:
       UndecidableInstances
   build-depends:
