--- a/Resource-DSL.cabal
+++ b/Resource-DSL.cabal
@@ -31,6 +31,7 @@ library
       ConstraintKinds
     , DeriveDataTypeable
     , DeriveGeneric
+    , DeriveTraversable
     , FlexibleContexts
     , FlexibleInstances
     , GeneralizedNewtypeDeriving
