--- a/stack.yaml
+++ b/stack.yaml
@@ -3,7 +3,8 @@
 
 resolver: lts-14.3
 extra-deps:
-  - git: https://github.com/IagoAbal/haskell-z3
-    commit: e79d2497b45f37365ca7d5b060c72f8624f2d7e2
+  - git: https://github.com/walkie/haskell-z3
+    commit: f78a3fc8bc01dae863e95539c2c9ed4f9719ab71
+  # - ../../haskell-z3
 extra-include-dirs:
   - /usr/include/z3/
