Try to override global system-ghc option.

--- a/stack.yaml
+++ b/stack.yaml
@@ -2,6 +2,7 @@
 # http://docs.haskellstack.org/en/stable/yaml_configuration/
 
 resolver: lts-14.3
+system-ghc: false
 extra-deps:
   - git: https://github.com/walkie/haskell-z3
     commit: f78a3fc8bc01dae863e95539c2c9ed4f9719ab71
